finance-app-file-storage/devops/application/storage.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: storage-deployment
  namespace: api
  labels:
    app: storage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
        - name: storage
          image: local/storage-app
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
