finance-app-file-storage/devops/application/storage.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  namespace: api
spec:
  selector:
    app: storage
  ports:
    - name: http
      port: 8080
