finance-app-file-storage/devops/application/storage.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: api.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storage-service
                port:
                  number: 8080
